# parity-game-solver

./: CMakeLists.txt  ParityGame.cpp  ParityGame.h  Parser.cpp  Parser.h  README.md  Solver.cpp  Solver.h  main.cpp
test-cases/: t1a.pg  t1b.pg  t2.pg  t2a.pg  t2b.pg  t5.pg  t6.pg  t7.pg  t8.pg
